argocd/manifests/affine/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: affine
  labels:
    app.kubernetes.io/name: affine
    app.kubernetes.io/managed-by: argocd
