argocd/manifests/affine/base/service-affine.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine
  namespace: affine
  labels:
    app: affine
    app.kubernetes.io/name: affine
spec:
  type: ClusterIP
  selector:
    app: affine
  ports:
    - name: http
      port: 3010
      targetPort: 3010
      protocol: TCP
