argocd/manifests/affine/base/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine-postgres
  namespace: affine
spec:
  type: ClusterIP
  selector:
    app: affine-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
